objects/box__Folder_Meta__c.object
<CustomObject>
    <fields>
        <fullName>box__Folder_Append__c</fullName>
        <label>Folder Append</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>box__Folder_Id__c</fullName>
        <label>Folder Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Folder_Share_Link__c</fullName>
        <label>Folder Share Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Folder Metadata</label>
    <listViews>
        <fullName>Nolan_Daigle_Folder_Meta</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>box__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Folder Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folder Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>